--- a/start.html
+++ b/start.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>My start  file is not index.html file</h1>
+    <h3>New destination</h3>
+    <img src="mmm.JPG" alt="" srcset="">
     
 </body>
 </html>
