--- a/start.html
+++ b/start.html
@@ -9,6 +9,11 @@
 <body>
     <h1>My start  file is not index.html file</h1>
     <h3>New destination</h3>
+    <div>
+        <h3>New blog</h3>
+        <h5>Look mama, I can write a blog</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempora laudantium eligendi dolorum possimus totam debitis maxime perspiciatis, adipisci consequatur excepturi et aperiam cupiditate velit optio in minus magnam laborum nisi facilis neque architecto incidunt? Alias et harum sequi ducimus.</p>
+    </div>
     <img src="mmm.JPG" alt="" srcset="">
     
 </body>
