--- a/start.html
+++ b/start.html
@@ -11,7 +11,7 @@
     <h3>New destination</h3>
     <div>
         <h3>New blog</h3>
-        <h5>Look mama, I can write a blog</h5>
+        <h5>Look mama, Amma jan amma jan choker moni amma jan. I can write a blog. I love you!</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempora laudantium eligendi dolorum possimus totam debitis maxime perspiciatis, adipisci consequatur excepturi et aperiam cupiditate velit optio in minus magnam laborum nisi facilis neque architecto incidunt? Alias et harum sequi ducimus.</p>
     </div>
     <img src="mmm.JPG" alt="" srcset="">
